--- a/styles.css
+++ b/styles.css
@@ -266,6 +266,7 @@ button.menu-toggle:hover {
 .menu li {
     margin: 0.5rem 0;
     text-align: center;
+    position: relative;
 }
 
 .menu a, .menu button.download-pdf {
@@ -327,10 +328,53 @@ button.menu-toggle:hover {
     display: block;
 }
 
+/* Nested dropdown menu */
+.dropdown {
+    position: relative;
+}
+
+.dropdown-toggle {
+    display: block;
+}
+
+.dropdown-menu {
+    display: none;
+    position: absolute;
+    top: 100%;
+    left: -100px;
+    background-color: #333;
+    border-radius: 5px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    min-width: 200px;
+    z-index: 1001;
+}
+
+.theme-dark .dropdown-menu {
+    background-color: #333;
+}
+
+.dropdown:hover .dropdown-menu {
+    display: block;
+}
+
+.dropdown-menu li {
+    margin: 0;
+}
+
+.dropdown-menu a {
+    padding: 0.5rem;
+    display: block;
+    text-align: center;
+}
+
 @media (max-width: 768px) {
     .menu {
         right: 2rem;
         width: 150px;
+    }
+    .dropdown-menu {
+        left: -50px;
+        min-width: 150px;
     }
 }
 
