--- a/styles.css
+++ b/styles.css
@@ -423,7 +423,7 @@ li {
     background-color: #ccc;
 }
 
-/* Download PDF Button */
+/* Download PDF Buttn */
 .download-pdf {
     font-size: 1rem;
     padding: 0.5rem;
